feat: expand audit fixes and frontend e2e coverage